[gd_scene load_steps=3 format=2]

[ext_resource path="res://player/CameraPlayer.gd" type="Script" id=1]

[sub_resource type="OpenSimplexNoise" id=1]

[node name="CameraPlayer" type="Camera2D"]
current = true
process_mode = 0
smoothing_enabled = true
smoothing_speed = 10.0
script = ExtResource( 1 )
noise = SubResource( 1 )

[node name="Limits" type="Node" parent="."]

[node name="TopLeft" type="Position2D" parent="Limits"]

[node name="BottomRight" type="Position2D" parent="Limits"]

[node name="Timer" type="Timer" parent="."]
wait_time = 0.1
autostart = true
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
